# libft

./: Makefile  README.md  \  check_testunit_template.c  clean_test.sh  ft_apply_precision.c  ft_atol.c  ft_buffer_add.c  ft_check_format.c  ft_getenv.c  ft_handle_char.c  ft_handle_hexadecimal.c  ft_handle_int.c  ft_handle_plus_flag.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_memchr.c  ft_memcpy.c  ft_nbr_len.c  ft_parse_flags.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+4 more)
.bak/: Makefile.bak
include/: libft.h  printf.h
src/bool/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_isxdigit.c
src/conversion/: ft_atoi.c  ft_atol.c  ft_ftoa.c  ft_htoa.c  ft_itoa.c  ft_itobase.c  ft_strtoi.c  ft_tolower.c  ft_toupper.c  ft_ulltoa_base.c  ft_utoa_base.c
src/get_next_line/: get_next_line.c
src/io/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_read_file.c  ft_write_str.c
src/list/: ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c
src/memory/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_memswap.c  ft_realloc.c
src/printf/: ft_apply_precision.c  ft_apply_width.c  ft_buffer_add.c  ft_buffer_flush.c  ft_check_format.c  ft_dprintf.c  ft_fprintf.c  ft_handle_binary.c  ft_handle_char.c  ft_handle_float.c  ft_handle_hash_flag.c  ft_handle_hexadecimal.c  ft_handle_int.c  ft_handle_plus_flag.c  ft_handle_pointer.c  ft_handle_space_flag.c  ft_handle_string.c  ft_isconvert_spec.c  ft_isflag.c  ft_nbr_len.c  ft_parse_flags.c  ft_parse_format.c  ft_parse_precision.c  ft_perror.c  ft_printf.c  ft_printf_globals.c  ft_snprintf.c
src/string/: ft_split.c  ft_strcat.c  ft_strchr.c  ft_strcspn.c  ft_strdup.c  ft_strexpand.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strndup.c  ft_strnstr.c  ft_strpbrk.c  ft_strrchr.c  ft_strreplace.c  ft_strtok.c  ft_strtrim.c  ft_substr.c
src/utils/: ft_check_fd.c  ft_check_malloc.c  ft_check_pid.c  ft_find_cmd_path.c  ft_get_home_dir.c  ft_getenv.c  ft_issorted.c  ft_path_join.c  ft_strarr_free.c  ft_strarr_len.c
test_src/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ft_isalnum  test_ft_isalpha  test_ft_isascii  test_ft_isdigit  test_ft_isprint  test_ft_isspace  test_ft_isxdigit  test_ft_memset
test_src/Testing/Temporary/: CTestCostData.txt
test_src/bool/: test_ft_isalnum.c  test_ft_isalpha.c  test_ft_isascii.c  test_ft_isdigit.c  test_ft_isprint.c  test_ft_isspace.c  test_ft_isxdigit.c
test_src/memory/: test_ft_memset.c
test_src/printf/: test_ft_snprintf.c
